[#2] - Adding custom validation to the save api

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,1 +1,2 @@
 message.error.missing_content=The message content cannot be empty
+message.error.invalid_prefix=The message content should starts with 'Duke: '
